// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with one feature 1`] = `
<li
  className="MuiListItem-root makeStyles-listItem-1 MuiListItem-gutters"
  disabled={false}
>
  <span
    className="makeStyles-listItemMetric-2"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M17.3,18C19,16.5 20,14.4 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12C4,14.4 5,16.5 6.7,18C8.2,16.7 10,16 12,16C14,16 15.9,16.7 17.3,18M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M7,9A1,1 0 0,1 8,10A1,1 0 0,1 7,11A1,1 0 0,1 6,10A1,1 0 0,1 7,9M10,6A1,1 0 0,1 11,7A1,1 0 0,1 10,8A1,1 0 0,1 9,7A1,1 0 0,1 10,6M17,9A1,1 0 0,1 18,10A1,1 0 0,1 17,11A1,1 0 0,1 16,10A1,1 0 0,1 17,9M14.4,6.1C14.9,6.3 15.1,6.9 15,7.4L13.6,10.8C13.8,11.1 14,11.5 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12C10,11 10.7,10.1 11.7,10L13.1,6.7C13.3,6.1 13.9,5.9 14.4,6.1Z"
        fill="#E0E0E0"
      />
    </svg>
  </span>
  <span>
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
        title="Toggle Another"
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            checked={false}
            className="PrivateSwitchBase-input-9 MuiSwitch-input"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
  </span>
  <span
    className="makeStyles-listItemLink-4"
  >
    <a
      className="listLink truncate"
      href="/features/strategies/Another"
      onClick={[Function]}
    >
      <span
        className="toggleName"
      >
        Another
         
      </span>
      <small>
        <time
          dateTime="2018-02-04T20:27:52.127Z"
          title="2018-02-04T20:27:52.127Z"
        >
          3 years ago
        </time>
      </small>
      <div>
        <span
          className="truncate"
        >
          <small>
            another's description
          </small>
        </span>
      </div>
    </a>
  </span>
  <span
    className="makeStyles-listItemStrategies-5 hideLt920"
  />
  <span />
</li>
`;

exports[`renders correctly with one feature without permission 1`] = `
<li
  className="MuiListItem-root makeStyles-listItem-1 MuiListItem-gutters"
  disabled={false}
>
  <span
    className="makeStyles-listItemMetric-2"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M17.3,18C19,16.5 20,14.4 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12C4,14.4 5,16.5 6.7,18C8.2,16.7 10,16 12,16C14,16 15.9,16.7 17.3,18M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M7,9A1,1 0 0,1 8,10A1,1 0 0,1 7,11A1,1 0 0,1 6,10A1,1 0 0,1 7,9M10,6A1,1 0 0,1 11,7A1,1 0 0,1 10,8A1,1 0 0,1 9,7A1,1 0 0,1 10,6M17,9A1,1 0 0,1 18,10A1,1 0 0,1 17,11A1,1 0 0,1 16,10A1,1 0 0,1 17,9M14.4,6.1C14.9,6.3 15.1,6.9 15,7.4L13.6,10.8C13.8,11.1 14,11.5 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12C10,11 10.7,10.1 11.7,10L13.1,6.7C13.3,6.1 13.9,5.9 14.4,6.1Z"
        fill="#E0E0E0"
      />
    </svg>
  </span>
  <span>
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={true}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-8 Mui-disabled Mui-disabled Mui-disabled"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        title="Toggle Another"
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            checked={false}
            className="PrivateSwitchBase-input-9 MuiSwitch-input"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
  </span>
  <span
    className="makeStyles-listItemLink-4"
  >
    <a
      className="listLink truncate"
      href="/features/strategies/Another"
      onClick={[Function]}
    >
      <span
        className="toggleName"
      >
        Another
         
      </span>
      <small>
        <time
          dateTime="2018-02-04T20:27:52.127Z"
          title="2018-02-04T20:27:52.127Z"
        >
          3 years ago
        </time>
      </small>
      <div>
        <span
          className="truncate"
        >
          <small>
            another's description
          </small>
        </span>
      </div>
    </a>
  </span>
  <span
    className="makeStyles-listItemStrategies-5 hideLt920"
  />
  <span />
</li>
`;
